--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ before_install:
     - docker pull cpollmeier/gosa3:devel
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel
     - pip install --upgrade pip
-    - apt-cache search dbus-1
-    - sudo apt-get install libdbus-1-dev
+    - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev
     - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python
     - export TZ=Europe/Berlin
     - sudo mkdir /tmp/workflows
