--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ services:
 python:
     - "3.5"
 
+virtualenv:
+  system_site_packages: true
+
 cache:
   directories:
     - plugins/gui/frontend/gosa/build
@@ -17,12 +20,14 @@ before_install:
     - docker pull cpollmeier/gosa3:devel
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel
     - pip install --upgrade pip
-    - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev python3-gi
-    - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python
     - export TZ=Europe/Berlin
     - sudo mkdir /tmp/workflows
     - sudo mkdir /etc/gosa
     - sudo cp ./test_conf/config /etc/gosa/
+
+install:
+    - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev python3-gi
+    - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python
 
 script:
     - cd plugins/gui/frontend/gosa/
