--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ services:
     - docker
 python:
     - "3.5"
-virtualenv:
-  system_site_packages: true
 cache:
   directories:
     - plugins/gui/frontend/gosa/build
 before_install:
+    - export PATH=/usr/bin:$PATH
     - sudo killall -9 postgres
     - docker pull cpollmeier/gosa3:devel
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel
