--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ cache:
   directories:
     - plugins/gui/frontend/gosa/build
 before_install:
-    - ls -la ~/virtualenv/
-    - ls -la ~/virtualenv/lib/
-    - ls -la ~/virtualenv/lib/python3.5/
+    - ls -la ~/virtualenv/python3.5/
+    - ls -la ~/virtualenv/python3.5/lib/
+    - ls -la ~/virtualenv/python3.5/lib/python3.5
+    - ls -la ~/virtualenv/python3.5/lib/python3.5/site-packages
     - sudo killall -9 postgres # kill system docker, as we use the one from docker
     - docker pull cpollmeier/gosa3:devel # download docker container
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel # start it
@@ -32,7 +33,7 @@ script:
     # setup GOsa, install deps...
     - ./setup.py develop
     # use gi package from system, as it is not installable from pip and travis' python3.5 does not use the system packages
-    - ln -s /usr/lib/python3/dist-packages/gi ~/virtualenv/lib/python3.5/site-packages/
+    - ln -s /usr/lib/python3/dist-packages/gi ~/virtualenv/python3.5/site-packages/
     # finally run the tests, with running dbus
     - dbus-launch ./setup.py test --addopts="--runslow"
 after_success:
