--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache:
   directories:
     - plugins/gui/frontend/gosa/build
 before_install:
-    - sudo killall -9 postgres # kill system docker, as we use the one from docker
+    - sudo killall -9 postgres # kill systems postgres, as we use the one from docker
     - docker pull cpollmeier/gosa3:devel # download docker container
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel # start it
     - pip install --upgrade pip # upgrade pip, we need the latest version
