its getting even more hacky

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ script:
     - ./setup.py develop
     # use gi package from system (the hacky way), as it is not installable from pip and travis' python3.5 does not use the system packages
     - ln -s /usr/lib/python3/dist-packages/gi ~/virtualenv/python3.5/lib/python3.5/site-packages/
+    - cp /usr/lib/python3/dist-packages/apt_pkg.cpython-35m-x86_64-linux-gnu.so ~/virtualenv/python3.5/lib/python3.5/site-packages/
     # finally run the tests, with running dbus
     - dbus-launch ./setup.py test --addopts="--runslow"
 after_success:
