--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ cache:
   directories:
     - plugins/gui/frontend/gosa/build
 before_install:
-    # use gi package from system (the hacky way), as it is not installable from pip and travis' python3.5 does not use the system packages
-    - ln -s /usr/lib/python3/dist-packages/gi ~/virtualenv/python3.5/lib/python3.5/site-packages/
     - sudo killall -9 postgres # kill systems postgres, as we use the one from docker
     - docker pull cpollmeier/gosa3:devel # download docker container
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel # start it
@@ -22,7 +20,7 @@ before_install:
     - sudo cp ./test_conf/config /etc/gosa/
 install:
     - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev # needed to compile dbus-python
-    - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python
+    - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python git+https://github.com/bochecha/pygobject.git@pip-install#egg=pygobject
 script:
     # build the gui, to be able to test it if gets served
     - cd plugins/gui/frontend/gosa/
