--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ cache:
   directories:
     - plugins/gui/frontend/gosa/build
 before_install:
+    - sudo cp test_conf/org.gosa.conf /etc/dbus-1/system.d/
+    - sudo service dbus reload
     - sudo killall -9 postgres # kill systems postgres, as we use the one from docker
     - docker pull cpollmeier/gosa3:devel # download docker container
     - docker run -d -p 389:389 -p 1883:1883 -p 5432:5432 cpollmeier/gosa3:devel # start it
