Added qrcode library + wrapper to the GUI

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -124,6 +124,9 @@
       [
         {
           "uri" : "resource/gosa/js/throbber.js"
+        },
+        {
+          "uri" : "resource/gosa/js/qrcode.js"
         }
       ],
       "copy-files" :
