add action for changing the users 2FA method

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -170,6 +170,9 @@
       [
         {
           "uri" : "resource/gosa/js/throbber.js"
+        },
+        {
+          "uri" : "resource/gosa/js/qrcode.js"
         }
       ]
     },
