replace some icons

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -230,6 +230,12 @@
             "prefix": [ "${RESPATH}" ],
             "alias" : "FontAwesome",
             "size" : 40
+          },
+          "${RESPATH}/gosa/fonts/LigatureSymbols-2.11.ttf" :
+          {
+            "prefix": [ "${RESPATH}" ],
+            "alias" : "Ligature",
+            "size" : 40
           }
         }
       }
