add full text search to the table search field
closes #23

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -132,6 +132,9 @@
         },
         {
           "uri" : "resource/gosa/js/u2f-api.js"
+        },
+        {
+          "uri" : "resource/gosa/js/Fuse.js"
         }
       ],
       "copy-files" :
@@ -181,6 +184,9 @@
         },
         {
           "uri" : "resource/gosa/js/u2f-api.js"
+        },
+        {
+          "uri" : "resource/gosa/js/Fuse.js"
         }
       ]
     },
