--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "plugins/gui/frontend/qooxdoo"]
 	path = plugins/gui/frontend/qooxdoo
-	url = https://github.com/qooxdoo/qooxdoo
+	url = https://github.com/gonicus/qooxdoo
 [submodule "plugins/gui/frontend/capture"]
 	path = plugins/gui/frontend/capture
 	url = https://github.com/cajus/capture.git
