fix gui plugin test
closes #35

--- a/test_conf/config
+++ b/test_conf/config
@@ -40,6 +40,9 @@ host = localhost
 [dbus]
 script-path = /tmp/shell.d
 
+[gui]
+debug = true
+
 ##############################################################################
 #                            Logger configuration                            #
 ##############################################################################
