--- a/plugins/gui/frontend/gosa/package.json
+++ b/plugins/gui/frontend/gosa/package.json
@@ -12,6 +12,8 @@
   ],
   "version": "3.0",
   "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-karma-coveralls": "^2.5.4",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
