try another path on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
     - sudo cp ./test_conf/config /etc/gosa/
 install:
     - sudo apt-get install libdbus-1-dev libdbus-glib-1-dev # needed to compile dbus-python
-    - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python
+    - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' dbus-python hidraw
     #- pip install -e git+https://github.com/bochecha/pygobject.git@pip-install#egg=pygobject
 before_script:
     - export DISPLAY=:99.0
