add and use a custom loader for plugins, to prevent qx.$$* data from beeing overwritten
refs #24

--- a/plugins/gui/frontend/gosa/plugins/activity/config.json
+++ b/plugins/gui/frontend/gosa/plugins/activity/config.json
@@ -30,7 +30,7 @@
   },
 
   "config-warnings" : {
-    "job-shadowing": [ "common", "build" ]
+    "job-shadowing": [ "common", "build", "build-script" ]
   },
 
   "jobs": {
@@ -40,6 +40,13 @@
       "lint-check": { "allowed-globals": [ "gosa" ] },
       "environment" : {
         "gosa.plugins.activity.source" : "external"
+      },
+      "compile-options" :
+      {
+        "paths"  :
+        {
+          "loader-template": "../plugin.loader.tmpl.js"
+        }
       }
     },
 
@@ -51,13 +58,8 @@
       [
         "build-resources",
         "build-script",
-        "build-files",
-        "build-zip"
+        "build-files"
       ]
-    },
-
-    "build-zip": {
-
     }
   }
 }
