create a zip archive on plugin build
refs #24

--- a/plugins/gui/frontend/gosa/plugins/activity/config.json
+++ b/plugins/gui/frontend/gosa/plugins/activity/config.json
@@ -58,8 +58,17 @@
       [
         "build-resources",
         "build-script",
-        "build-files"
+        "build-files",
+        "build-package"
       ]
+    },
+
+    "build-package": {
+      "desc"  : "Bundles the generated build in a single compresses archive",
+
+      "shell": {
+        "command": "../create-plugin-bundle.py ${APPLICATION} ${BUILD_PATH}"
+      }
     }
   }
 }
