--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -220,7 +220,7 @@
       [
         { "manifest" : "../uploadmgr/Manifest.json" },
         { "manifest" : "../capture/Manifest.json" },
-        { "manifest" : "plugins/activity/Manifest.json" }
+//        { "manifest" : "plugins/activity/Manifest.json" }
       ]
     },
 
@@ -234,7 +234,7 @@
             "${QXTHEME}", "gosa.Application", "gosa.ui.widgets.*", "gosa.engine.*",
             "gosa.ui.dialogs.*", "gosa.plugins.search.*", "gosa.LocalConfig"
           ] },
-          "gosa.plugins.activity"       : { "include" : [ "gosa.plugins.activity.Main" ] }
+//          "gosa.plugins.activity"       : { "include" : [ "gosa.plugins.activity.Main" ] }
         }
       }
     },
