change widgets name + fix link to resources
refs #24

--- a/plugins/gui/frontend/gosa/plugins/activity/Manifest.json
+++ b/plugins/gui/frontend/gosa/plugins/activity/Manifest.json
@@ -1,7 +1,7 @@
 {
   "info" : 
   {
-    "name" : "activity",
+    "name" : "Activities",
 
     "summary" : "GoSA last activity dashboard plugin",
     "description" : "This plugin add a dashboard widget that shows the last changed object as a list.",
