rename plugin achive generator script
refs #24

--- a/plugins/gui/frontend/gosa/plugins/_template/config.json
+++ b/plugins/gui/frontend/gosa/plugins/_template/config.json
@@ -67,7 +67,7 @@
       "desc"  : "Bundles the generated build in a single compresses archive",
 
       "shell": {
-        "command": "../create-plugin-bundle.py ${APPLICATION} ${BUILD_PATH}"
+        "command": "../make-plugin-bundle.py ${APPLICATION} ${BUILD_PATH}"
       }
     }
   }
