move upload path to config.json
refs #24

--- a/plugins/gui/frontend/gosa/plugins/_template/config.json
+++ b/plugins/gui/frontend/gosa/plugins/_template/config.json
@@ -40,7 +40,8 @@
       "=exclude" : [ "qx.*" ],
       "lint-check": { "allowed-globals": [ "gosa" ] },
       "environment" : {
-        "gosa.plugins.activity.source" : "external"
+        "gosa.plugins.activity.source" : "external",
+        "gosa.plugins.uploadPath" : "../uploads/widgets/${APPLICATION}/"
       },
       "compile-options" :
       {
