refactor plugin path handling
refs #24

--- a/plugins/gui/frontend/gosa/plugins/_template/config.json
+++ b/plugins/gui/frontend/gosa/plugins/_template/config.json
@@ -40,8 +40,9 @@
       "=exclude" : [ "qx.*" ],
       "lint-check": { "allowed-globals": [ "gosa" ] },
       "environment" : {
-        "gosa.plugins.activity.source" : "external",
-        "gosa.plugins.uploadPath" : "../uploads/widgets/${APPLICATION}/"
+        "APPLICATION" : "${APPLICATION}",
+        "${APPLICATION}.source" : "external",
+        "${APPLICATION}.uploadPath" : "../uploads/widgets/${APPLICATION}/"
       },
       "compile-options" :
       {
