move locales to parts

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -235,7 +235,8 @@
     {
       "packages" :
       {
-//        "i18n-as-parts"    : true,
+        "separate-loader"  : true,
+        "i18n-as-parts"    : true,
         "parts"  :
         {
           "boot"                  : { "include" : [
