--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -42,7 +42,8 @@
       "source-script",
       "libraries",
       "common",
-      "source"
+      "source",
+      "lint"
     ]
   },
 
@@ -66,6 +67,10 @@
       "lint-check": {
         "ignore-environment-nonlit-key": true
       }
+    },
+
+    "lint": {
+      "extend": ["common"]
     },
 
     "source-destruct" :
