--- a/plugins/gui/frontend/gosa/plugins/yql/config.json
+++ b/plugins/gui/frontend/gosa/plugins/yql/config.json
@@ -70,7 +70,7 @@
       "desc"  : "Bundles the generated build in a single compresses archive",
 
       "shell": {
-        "command": "../make.py plugin-bundle ${APPLICATION} ${BUILD_PATH}"
+        "command": "../make.py bundle-plugin ${APPLICATION} ${BUILD_PATH}"
       }
     }
   }
