add icons to Manifest and use them in the Dashboard

--- a/plugins/gui/frontend/gosa/plugins/activity/Manifest.json
+++ b/plugins/gui/frontend/gosa/plugins/activity/Manifest.json
@@ -18,7 +18,8 @@
     ],
 
     "version" : "3.0",
-    "qooxdoo-versions": ["5.1"]
+    "qooxdoo-versions": ["5.1"],
+    "icon": "@Ligature/exchange"
   },
   
   "provides" : 
