add qx build cache directory to cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
   directories:
     - plugins/gui/frontend/gosa/build
     - /home/travis/virtualenv
+    - /tmp/qx5.1
 before_install:
     - sudo cp test_conf/org.gosa.conf /etc/dbus-1/system.d/
     - ls -la /etc/dbus-1/system.d/
