add override to example config

--- a/example/config
+++ b/example/config
@@ -39,6 +39,9 @@ host = localhost
 url = http://localhost:8000/rpc
 key = tester
 
+[webhooks]
+ldap_monitor_token = 9d6250c0-6413-4b1e-98d9-7b763472962a
+
 ##############################################################################
 #                            Logger configuration                            #
 ##############################################################################
