--- a/test_conf/config
+++ b/test_conf/config
@@ -43,6 +43,9 @@ script-path = /tmp/shell.d
 [gui]
 debug = true
 
+[webhooks]
+ldap_monitor_token = 9d6250c0-6413-4b1e-98d9-7b763472962a
+
 ##############################################################################
 #                            Logger configuration                            #
 ##############################################################################
