--- a/test_conf/config
+++ b/test_conf/config
@@ -46,6 +46,12 @@ debug = true
 [webhooks]
 ldap_monitor_token = 9d6250c0-6413-4b1e-98d9-7b763472962a
 
+[backend-monitor]
+audit-log = /var/run/gosa/audit.log
+modifier = cn=ldapadmin,dc=example,dc=net
+webhook-target = http://localhost:8000/hooks/
+webhook-token = 9d6250c0-6413-4b1e-98d9-7b763472962a
+
 ##############################################################################
 #                            Logger configuration                            #
 ##############################################################################
