--- a/test_conf/config
+++ b/test_conf/config
@@ -44,6 +44,7 @@ script-path = /tmp/shell.d
 debug = true
 
 [webhooks]
+registry-store = /tmp/webhooks
 ldap_monitor_token = 9d6250c0-6413-4b1e-98d9-7b763472962a
 
 [backend-monitor]
